[metadata]
name = nutil
version = attr:nutil.__version__
description = Utility functions
long_description = file:README.md
long_description_content_type = text/markdown
author = Florian Barras
author_email = florian@barras.io
license = MIT
license_files = LICENSE
url = https://github.com/b-io/io.barras/tree/master/python/neptune

keywords =
	utilities

classifiers =
	Development Status :: 4 - Beta

	Intended Audience :: Developers

	License :: OSI Approved :: MIT License

	Operating System :: OS Independent

	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy

	Topic :: Utilities

project_urls =
	Bug Tracker = https://github.com/b-io/io.barras/issues
	Documentation = https://repo.barras.io
	Source Code = https://github.com/b-io/io.barras/tree/master/python/neptune

[options]
package_dir =
	=source
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
	javaproperties
	matplotlib
	numpy
	opencv-python
	pandas
	plotly
	psutil
	python-dateutil
	requests
	scipy
	sqlalchemy
	validators
	xhtml2pdf

[options.packages.find]
where = source

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
