[metadata]
name = nmath
version = attr:nmath.__version__
description = Mathematical utility library
long_description = file:README.md
long_description_content_type = text/markdown
author = Florian Barras
author_email = florian@barras.io
license = MIT
license_files = LICENSE
url = https://github.com/b-io/io.barras/tree/master/python/neptune/nmath

keywords =
	mathematics
	statistics
	utilities

classifiers =
	Development Status :: 4 - Beta

	Intended Audience :: Developers

	License :: OSI Approved :: MIT License

	Operating System :: OS Independent

	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy

	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Utilities

project_urls =
	Bug Tracker = https://github.com/b-io/io.barras/issues
	Documentation = https://repo.barras.io
	Source Code = https://github.com/b-io/io.barras/tree/master/python/neptune/nmath

[options]
package_dir = source
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
	ngui
	nutil
	scipy

[options.packages.find]
where = source

[mypy]
disallow_incomplete_defs = True
disallow_untyped_defs = True
ignore_missing_imports = True
local_partial_types = True
no_implicit_optional = True
no_implicit_reexport = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
